--- a/_config.yml
+++ b/_config.yml
@@ -182,12 +182,12 @@ whitelist:
 #  - <base_path>/tags/my-awesome-tag/index.html ~> path: /tags/
 #  - <base_path>/categories/my-awesome-category/index.html ~> path: /categories/
 #  - <base_path>/my-awesome-category/index.html ~> path: /
-category_archive:
-  type: liquid
-  path: /categories/
-tag_archive:
-  type: liquid
-  path: /tags/
+#category_archive:
+#  type: liquid
+#  path: /categories/
+#tag_archive:
+#  type: liquid
+#  path: /tags/
 # https://github.com/jekyll/jekyll-archives
 # jekyll-archives:
 #   enabled:
@@ -203,10 +203,10 @@ tag_archive:
 
 # HTML Compression
 # - https://jch.penibelst.de/
-compress_html:
-  clippings: all
-  ignore:
-    envs: development
+#compress_html:
+#  clippings: all
+#  ignore:
+#    envs: development
 
 
 # Defaults
